--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Star Sprite Clicker</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='./assets/css/style.css'>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <script src='./js/main.js'></script>
     <script src='./js/reset.js'></script>
 </head>
