adding comments and organization for html elements

--- a/index.html
+++ b/index.html
@@ -59,12 +59,16 @@
 
     <div id="mainGame" style="display: none">
 
-    <p class="question" id="question"></p>
+    <!--    This is deprecated. Pending deletion, saved only as a remminder class and title referendes
+        <p class="question" id="question"></p>
 
-    <input type="text" id="guess" maxlength="1">
+        <input type="text" id="guess" maxlength="1"> -->
+
+        <!-- Create div elements for a flexbox grid of columns and rows -->
 
     <div>
-        <button onclick="enterGuess()">Enter Guess</button>
+        <!-- Create functions for actions and organize these elements here -->
+        <button onclick="enterGuess()"> Attack icon</button>
     </div>
 
     </div>
