Adding main game HTMl

--- a/index.html
+++ b/index.html
@@ -58,13 +58,43 @@
     <!-- Hidden Game Screen, needs updating -->
 
     <div id="mainGame" style="display: none">
-
-    <!--    This is deprecated. Pending deletion, saved only as a remminder class and title referendes
-        <p class="question" id="question"></p>
-
-        <input type="text" id="guess" maxlength="1"> -->
-
         <!-- Create div elements for a flexbox grid of columns and rows -->
+        <div class="flex-row" value="1" title="y">
+            <div class="row-item" value="-1" title="x"></div>
+            <div class="row-item" value="-0.5" title="x"></div>
+            <div class="row-item" value="0" title="x"></div>
+            <div class="row-item" value="0.5" title="x"></div>
+            <div class="row-item" value="1" title="x"></div>
+        </div>
+        <div class="flex-row" value="0.5" title="y">
+            <div class="row-item" value="-1" title="x"></div>
+            <div class="row-item" value="-0.5" title="x"></div>
+            <div class="row-item" value="0" title="x"></div>
+            <div class="row-item" value="0.5" title="x"></div>
+            <div class="row-item" value="1" title="x"></div>
+        </div>
+        <div class="flex-row" value="0" title="y">
+            <div class="row-item" value="-1" title="x"></div>
+            <div class="row-item" value="-0.5" title="x"></div>
+            <div class="row-item" value="0" title="x"></div>
+            <div class="row-item" value="0.5" title="x"></div>
+            <div class="row-item" value="1" title="x"></div>
+        </div>
+        <div class="flex-row" value="-0.5" title="y">
+            <div class="row-item" value="-1" title="x"></div>
+            <div class="row-item" value="-0.5" title="x"></div>
+            <div class="row-item" value="0" title="x"></div>
+            <div class="row-item" value="0.5" title="x"></div>
+            <div class="row-item" value="1" title="x"></div>
+        </div>
+        <div class="flex-row" value="-1" title="y">
+            <div class="row-item" value="-1" title="x"></div>
+            <div class="row-item" value="-0.5" title="x"></div>
+            <div class="row-item" value="0" title="x"></div>
+            <div class="row-item" value="0.5" title="x"></div>
+            <div class="row-item" value="1" title="x"></div>
+        </div>
+        
 
     <div>
         <!-- Create functions for actions and organize these elements here -->
