fixed syntax error

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         <!-- Create functions for actions and organize these elements here -->
         <div class="flex-row">
             <div class="row-item" id="blank"></div>
-            <div class="row-item" id="up"><button class="btn" onclick="enterGuess()"><i class="fas fa-caret-up"></i>/button></div>
+            <div class="row-item" id="up"><button class="btn" onclick="enterGuess()"><i class="fas fa-caret-up"></i></button></div>
             <div class="row-item" id="blank"></div>
         </div>
         <div class="flex-row">
